Update ServerStart.cmd with Java 21 and log redirection